<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".views.MainActivity">

    <ImageView
        android:id="@+id/navigation_image"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:scaleType="centerCrop"
        android:src="@drawable/promocare" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_connection_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center" />



    <EditText
        android:id="@+id/connection_user_username"
        android:layout_width="300dp"
        android:layout_height="80dp"


        android:gravity="center"
        android:hint="@string/user_connection_email_placeholder"
        android:text="aaaaa@gmail.com"
        android:textColor="#000080"
        android:textColorHint="#B0C4DE"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/connection_user_password"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:text="aaaaaa"
        android:hint="@string/connection_user_placeholder"
        android:inputType="textPassword"
        android:textColor="#000080"
        android:textColorHint="#B0C4DE"
        android:maxLines="1"
        android:singleLine="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/connection_user_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/error"
        android:visibility="invisible" />

    <Button
        android:id="@+id/connection_user_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:text="@string/connection_user_button_text"
        android:backgroundTint="#1E90FF"
        android:textColor="#FFFFFF"
        android:gravity="center"  />






    <TextView
        android:id="@+id/connection_user_register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_connexion_go_to_inscription"
        android:textColor="@color/link"
        android:gravity="center" />

    <TextView
        android:id="@+id/connection_user_go_to_company_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/connexion_user_go_to_company"
        android:textColor="@color/link"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#f7c176"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_bottom_text"
            android:textColor="#000000"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_bottom_text_date"
            android:textColor="#000000"
            android:gravity="center" />

    </LinearLayout>
</LinearLayout>

