...
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/company_annonce_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="SEARCH_BAR_VIEW"
            android:layout_marginBottom="15dp"
            android:name="com.esgi.promocare_android.fragment.SearchBarFragment"
            />
...
